styles/card.css
.id-label {
  display: none;
  position: absolute;
  top: -8px;
  left: -8px;
  border-radius: 50%;
  color: var(--white);
  background: var(--dark-blue);
  height: 24px;
  width: 24px;
  justify-content: center;
  align-items: center;
}

.card {
  position: relative;
  background-color: var(--very-light-gray);
  border-radius: 8px;
  height: 10vh;
  padding: 1rem;
  width: calc(100vw / 3);
  margin-top: 16px;
}

.card-comment-layout {
  display: grid;
  grid-auto-columns: 1fr;
  grid-template-columns: 10% 80% 10%;
  grid-template-rows: 0.5fr 1.5fr;
  gap: 0px 0px;
  grid-template-areas:
    "score-area header-area actions-area"
    "score-area content-area content-area";
}

@media screen and (max-width: 768px) {
  .card {
    height: fit-content;
    width: 100%;
  }

  .card-comment-layout {
    display: grid;
    grid-auto-columns: 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.5fr 1.5fr 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "header-area header-area header-area"
      "content-area content-area content-area"
      "score-area gap actions-area";
  }
}

.score-area {
  grid-area: score-area;
  display: flex;
  justify-content: center;
}

@media screen and (max-width: 768px) {
  .score-area {
    align-items: center;
  }
}

.header-area {
  grid-area: header-area;
}

.actions-area {
  grid-area: actions-area;
}

@media screen and (max-width: 768px) {
  .actions-area {
    align-items: center;
  }
}

.content-area {
  grid-area: content-area;
  display: flex;
}

.comment-header {
  display: flex;
  justify-content: space-between;
}

.user-details {
  display: flex;
  align-items: center;
  width: -webkit-fill-available;
}

.user-details > * {
  margin-right: 1rem;
}

.post-profile-picture {
  width: 2rem;
}

.user-name {
  color: var(--dark-blue);
  font-size: 16px;
  font-weight: bold;
}

.you-label {
  border-radius: 2px;
  margin-left: 4px;
  padding: 6px;
  font-size: 10px;
  font-weight: bold;
  color: var(--white);
  background-color: var(--moderate-blue);
}

.time-stamp {
  color: var(--grayish-blue);
  font-size: 16px;
}

.score-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
  background-color: var(--light-gray);
  border-radius: 8px;
  width: 2rem;
  font-weight: bold;
  height: 80%;
}

@media screen and (max-width: 768px) {
  .score-container {
    width: 6rem;
    margin-right: 0;
    flex-direction: row;
    height: fit-content;
  }
}

.score-button {
  font-size: 16px;
  font-weight: bold;
  color: var(--grayish-blue);
}

.score-value {
  color: var(--moderate-blue);
}

.post-actions {
  display: flex;
  justify-content: flex-end;
}

.action-button {
  font-weight: bold;
  color: var(--moderate-blue);
  display: flex;
}

.delete-button {
  font-weight: bold;
  color: var(--soft-red);
}

.text-content {
  color: var(--dark-blue);
  margin-top: 0.5rem;
}

.user-tag {
  font-weight: bold;
  color: var(--moderate-blue);
}

.child-padding {
  padding-left: 1rem;
}

.edit-area {
  display: none;
  width: -webkit-fill-available;
  resize: none;
}

.update-content-button {
  display: none;
  margin-left: 4px;
}

